{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 377,
  "lineage": "58a501b2-2688-fe3c-f39c-a528b89f2df3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea7db97c97a55842",
            "association_id": "eipassoc-0be5d41e9aaffabd7",
            "domain": "vpc",
            "id": "eipalloc-0ea7db97c97a55842",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b40466fedce17e8",
            "private_dns": "ip-172-0-10-114.ec2.internal",
            "private_ip": "172.0.10.114",
            "public_dns": "ec2-23-21-219-134.compute-1.amazonaws.com",
            "public_ip": "23.21.219.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-011777561f6d55260",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011777561f6d55260",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nlb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2200561b4c47668",
            "private_dns": "ip-172-0-11-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.11.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c5df41f220cf0b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082a2af6d22164957",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a6c020c2dad05ff"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-081e3b9b9058be2e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081e3b9b9058be2e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nlb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b0ed82616744294",
            "private_dns": "ip-172-0-12-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.12.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c9207205f129c5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067ea739d83aedfd5",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a6c020c2dad05ff"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-02d2b84e1b4df2eeb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d2b84e1b4df2eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nlb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b190ec970eb46290",
            "private_dns": "ip-172-0-13-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.13.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5659dd9d8c88431",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005dee9288c88b81a",
            "tags": {
              "Name": "Webserver-3"
            },
            "tags_all": {
              "Name": "Webserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a6c020c2dad05ff"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-0e820958f85114ddc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e820958f85114ddc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nlb-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e93791047688d40c",
            "private_dns": "ip-172-0-10-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.10.78",
            "public_dns": "ec2-44-192-85-119.compute-1.amazonaws.com",
            "public_ip": "44.192.85.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce2403cbbff56e2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc92a2380fb1f99e",
            "tags": {
              "Name": "Pub-Serv"
            },
            "tags_all": {
              "Name": "Pub-Serv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a6c020c2dad05ff"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nat-sg",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-055be0219502ed77b",
            "id": "igw-055be0219502ed77b",
            "owner_id": "975266691648",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prac_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/net/nlb-lb/28d5b2d8b62819e4",
            "arn_suffix": "net/nlb-lb/28d5b2d8b62819e4",
            "dns_name": "nlb-lb-28d5b2d8b62819e4.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/net/nlb-lb/28d5b2d8b62819e4",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-lb",
            "security_groups": [
              "sg-03a6c020c2dad05ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cc92a2380fb1f99e"
              }
            ],
            "subnets": [
              "subnet-0cc92a2380fb1f99e"
            ],
            "vpc_id": "vpc-0b74155ed33aca8dc",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/net/nlb-lb/28d5b2d8b62819e4/0c0a062f24483b5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:listener/net/nlb-lb/28d5b2d8b62819e4/0c0a062f24483b5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:loadbalancer/net/nlb-lb/28d5b2d8b62819e4",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prac_lb",
            "aws_lb_target_group.nlb-tg",
            "aws_security_group.nat-sg",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
            "arn_suffix": "targetgroup/NLB-TG/c23bf731e6f6fa64",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "NLB-TG",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "att-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64-20230822081803406200000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
            "target_id": "i-011777561f6d55260"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_instance.priv-serv",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_lb_target_group.nlb-tg",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64-20230822081802962100000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
            "target_id": "i-081e3b9b9058be2e2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_instance.priv-serv",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_lb_target_group.nlb-tg",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64-20230822081802588000000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975266691648:targetgroup/NLB-TG/c23bf731e6f6fa64",
            "target_id": "i-02d2b84e1b4df2eeb"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_instance.priv-serv",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_lb_target_group.nlb-tg",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_security_group.nat-sg",
            "aws_subnet.priv1-sub",
            "aws_subnet.priv2-sub",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea7db97c97a55842",
            "association_id": "eipassoc-0be5d41e9aaffabd7",
            "connectivity_type": "public",
            "id": "nat-0f4a429542c734486",
            "network_interface_id": "eni-00b40466fedce17e8",
            "private_ip": "172.0.10.114",
            "public_ip": "23.21.219.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc92a2380fb1f99e",
            "tags": {
              "Name": "NAT-GW"
            },
            "tags_all": {
              "Name": "NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-039dfff29485cf4d6",
            "id": "rtb-039dfff29485cf4d6",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4a429542c734486",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-priv-rt"
            },
            "tags_all": {
              "Name": "Nat-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-0230529114a909256",
            "id": "rtb-0230529114a909256",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055be0219502ed77b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat-pub-rt"
            },
            "tags_all": {
              "Name": "Nat-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d439398e8d61a9ce",
            "route_table_id": "rtb-039dfff29485cf4d6",
            "subnet_id": "subnet-082a2af6d22164957"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_subnet.priv1-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b7e8a63a655191b",
            "route_table_id": "rtb-039dfff29485cf4d6",
            "subnet_id": "subnet-067ea739d83aedfd5"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_subnet.priv2-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-ip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96de92f7e3aa35d",
            "route_table_id": "rtb-039dfff29485cf4d6",
            "subnet_id": "subnet-005dee9288c88b81a"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.nat-priv-rt",
            "aws_subnet.priv3-sub",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0849c141fa8cbd6d9",
            "route_table_id": "rtb-0230529114a909256",
            "subnet_id": "subnet-0cc92a2380fb1f99e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.nat-pub-rt",
            "aws_subnet.pub-sub",
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-03a6c020c2dad05ff",
            "description": "bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a6c020c2dad05ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat-sg",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nat-SG"
            },
            "tags_all": {
              "Name": "Nat-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-082a2af6d22164957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.11.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082a2af6d22164957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-067ea739d83aedfd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.12.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ea739d83aedfd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv3-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-005dee9288c88b81a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.13.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005dee9288c88b81a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-0cc92a2380fb1f99e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc92a2380fb1f99e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Demo"
            },
            "tags_all": {
              "Name": "Subnet-Demo"
            },
            "vpc_id": "vpc-0b74155ed33aca8dc"
          },
          "dependencies": [
            "aws_vpc.nat-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nat-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-0b74155ed33aca8dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0e20f74b0f913f140",
            "default_route_table_id": "rtb-033bc079ec20af98b",
            "default_security_group_id": "sg-09b9ee202a8b95cef",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b74155ed33aca8dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033bc079ec20af98b",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-Demo"
            },
            "tags_all": {
              "Name": "VPC-Demo"
            }
          }
        }
      ]
    }
  ]
}